*panic* button, config automatization