@@ -4,6 +4,7 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import net.blancworks.figura.config.ConfigManager;
 import net.blancworks.figura.config.ConfigManager.Config;
+import net.blancworks.figura.config.ConfigManager.ConfigKeyBind;
 import net.blancworks.figura.gui.FiguraToast;
 import net.blancworks.figura.lua.FiguraLuaManager;
 import net.blancworks.figura.models.CustomModel;
@@ -23,18 +24,16 @@ import net.fabricmc.fabric.impl.client.keybinding.KeyBindingRegistryImpl;
 import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.network.AbstractClientPlayerEntity;
-import net.minecraft.client.options.KeyBinding;
 import net.minecraft.client.render.OverlayTexture;
 import net.minecraft.client.render.VertexConsumerProvider;
 import net.minecraft.client.render.entity.model.PlayerEntityModel;
 import net.minecraft.client.util.InputUtil;
-import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.NbtIo;
 import net.minecraft.resource.ResourceManager;
 import net.minecraft.resource.ResourceType;
 import net.minecraft.text.Style;
 import net.minecraft.text.Text;
-import net.minecraft.text.TextColor;
 import net.minecraft.text.TranslatableText;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.Vec3d;
@@ -43,12 +42,10 @@ import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.Nullable;
 import org.lwjgl.glfw.GLFW;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
@@ -66,10 +63,11 @@ public class FiguraMod implements ClientModInitializer {
     public static final String MOD_VERSION = FabricLoader.getInstance().getModContainer("figura").get().getMetadata().getVersion().getFriendlyString();
 
     public static final boolean IS_CHEESE = LocalDate.now().getDayOfMonth() == 1 && LocalDate.now().getMonthValue() == 4;
-    public static CompoundTag cheese;
+    public static NbtCompound cheese;
 
-    public static KeyBinding actionWheel;
-    public static KeyBinding playerPopup;
+    public static final ConfigKeyBind ACTION_WHEEL_BUTTON = new ConfigKeyBind("figura.config.action_wheel_button", GLFW.GLFW_KEY_B, "key.categories.misc", Config.ACTION_WHEEL_BUTTON);
+    public static final ConfigKeyBind PLAYER_POPUP_BUTTON = new ConfigKeyBind("figura.config.player_popup_button", GLFW.GLFW_KEY_R, "key.categories.misc", Config.PLAYER_POPUP_BUTTON);
+    public static final ConfigKeyBind PANIC_BUTTON = new ConfigKeyBind("figura.config.panic_button", GLFW.GLFW_KEY_UNKNOWN, "key.categories.misc", Config.PANIC_BUTTON);
 
     public static int ticksElapsed;
 
@@ -120,6 +118,7 @@ public class FiguraMod implements ClientModInitializer {
 
     @Override
     public void onInitializeClient() {
+        //initialise managers
         ConfigManager.initialize();
         FiguraLuaManager.initialize();
         PlayerTrustManager.init();
@@ -131,37 +130,14 @@ public class FiguraMod implements ClientModInitializer {
             e.printStackTrace();
         }
 
-        //action wheel keybind
-        actionWheel = new KeyBinding(
-                "key.figura.actionwheel",
-                GLFW.GLFW_KEY_B,
-                "key.categories.misc"
-        ){
-            @Override
-            public void setBoundKey(InputUtil.Key boundKey) {
-                super.setBoundKey(boundKey);
-                Config.ACTION_WHEEL_BUTTON.value = boundKey.getCode();
-                ConfigManager.saveConfig();
-        }};
+        //set keybinds based on config
+        ACTION_WHEEL_BUTTON.setBoundKey(InputUtil.Type.KEYSYM.createFromCode((int) Config.ACTION_WHEEL_BUTTON.value));
+        PLAYER_POPUP_BUTTON.setBoundKey(InputUtil.Type.KEYSYM.createFromCode((int) Config.PLAYER_POPUP_BUTTON.value));
+        PANIC_BUTTON.setBoundKey(InputUtil.Type.KEYSYM.createFromCode((int) Config.PANIC_BUTTON.value));
 
-        actionWheel.setBoundKey(InputUtil.Type.KEYSYM.createFromCode((int) Config.ACTION_WHEEL_BUTTON.value));
-        KeyBindingRegistryImpl.registerKeyBinding(actionWheel);
-
-        //reload avatar keybind
-        playerPopup = new KeyBinding(
-                "key.figura.playerpopup",
-                GLFW.GLFW_KEY_R,
-                "key.categories.misc"
-        ){
-            @Override
-            public void setBoundKey(InputUtil.Key boundKey) {
-                super.setBoundKey(boundKey);
-                Config.PLAYER_POPUP_BUTTON.value = boundKey.getCode();
-                ConfigManager.saveConfig();
-            }};
-
-        playerPopup.setBoundKey(InputUtil.Type.KEYSYM.createFromCode((int) Config.PLAYER_POPUP_BUTTON.value));
-        KeyBindingRegistryImpl.registerKeyBinding(playerPopup);
+        KeyBindingRegistryImpl.registerKeyBinding(ACTION_WHEEL_BUTTON);
+        KeyBindingRegistryImpl.registerKeyBinding(PLAYER_POPUP_BUTTON);
+        KeyBindingRegistryImpl.registerKeyBinding(PANIC_BUTTON);
 
         //Set up network
         newNetworkManager = new NewFiguraNetworkManager();
@@ -179,7 +155,7 @@ public class FiguraMod implements ClientModInitializer {
             }
 
             @Override
-            public void apply(ResourceManager manager) {
+            public void reload(ResourceManager manager) {
                 PlayerDataManager.reloadAllTextures();
 
                 try {
@@ -212,7 +188,7 @@ public class FiguraMod implements ClientModInitializer {
     public static Path getModContentDirectory() {
         String userPath = (String) Config.MODEL_FOLDER_PATH.value;
         try {
-            Path p = userPath.isEmpty() ? getDefaultDirectory() : new File(userPath).toPath();;
+            Path p = userPath.isEmpty() ? getDefaultDirectory() : Path.of(userPath);
             if (!Files.exists(p))
                 Files.createDirectories(p);
 
@@ -297,23 +273,18 @@ public class FiguraMod implements ClientModInitializer {
     }
 
     public static void sendToast(Object title, Object message) {
-        Text text, text2;
-
-        if (title instanceof Text) text = (Text) title;
-        else text = new TranslatableText(title.toString());
-
-        if (message instanceof Text) text2 = (Text) message;
-        else text2 = new TranslatableText(message.toString());
+        Text text = title instanceof Text t ? t : new TranslatableText(title.toString());
+        Text text2 = message instanceof Text m ? m : new TranslatableText(message.toString());
 
         MinecraftClient.getInstance().getToastManager().clear();
         MinecraftClient.getInstance().getToastManager().add(new FiguraToast(text, text2));
     }
 
     public static Style getAccentColor(Style style) {
-        return style.withColor(TextColor.fromRgb((int) Config.ACCENT_COLOR.value));
+        return style.withColor((int) Config.ACCENT_COLOR.value);
     }
 
-    public final static List<UUID> VIP = Arrays.asList(
+    public final static List<UUID> VIP = List.of(
             UUID.fromString("aa0e3391-e497-4e8e-8afe-b69dfaa46afa"), //salad
             UUID.fromString("da53c608-d17c-4759-94fe-a0317ed63876"), //zandra
             UUID.fromString("66a6c5c4-963b-4b73-a0d9-162faedd8b7f"), //fran
